# fmp4j

./: .coverage_history  .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.circleci/: config.yml
.copilot/: copilot-instructions.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: api-integration-resquest.md  value-object-request.md
.github/PULL_REQUEST_TEMPLATE/: api-integration.md
.github/workflows/: blacklist.yaml  checkstyle.yaml  commit-message-check.yaml  coverage.yaml  model-serialization-check.yaml  python-tests.yaml  spotless.yaml
buildSrc/: build.gradle
buildSrc/src/main/groovy/: CoveragePlugin.groovy
config/: eclipse-java-formatter.xml
config/checkstyle/: checkstyle-suppressions.xml  checkstyle.xml
docs/: CHECKSTYLE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md
gradle/wrapper/: gradle-wrapper.properties
python/: .gitignore  MANIFEST.in  local_test.sh  publish.sh  pyproject.toml  requirements.txt  setup.py
python/docs/: README.md  benchmark.md
python/fmp4j/: __init__.py  cli.py  client.py
python/tests/: test_calendar_client.py  test_chart_client.py  test_client.py  test_company_client.py  test_directory_client.py  test_economics_client.py  test_etf_client.py  test_news_client.py  test_quotes_client.py  test_search_client.py  test_sec_filings_search_client.py  test_statements_client.py
src/cucumber/resources/: junit-platform.properties
src/cucumber/resources/features/: dummy.feature
src/test/resources/: fmp4j.properties
src/testFixtures/resources/models/serialization/: FmpEtf.snapshot  (+54 more)
(+490 files in other folders)
